Closed Bug 1559859 Opened 5 years ago Closed 5 years ago

Always release mWidget in UiCompositorControllerChild::Destroy()

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox68 --- fixed
firefox69 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

In UiCompositorControllerChild::Destroy(), mWidget is released only when mIsOpen is true. But it should be always released if it exist.

Assignee: nobody → sotaro.ikeda.g
Blocks: 1547760
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b0f2fc39f250
Always release mWidget in UiCompositorControllerChild::Destroy() r=kats
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

Comment on attachment 9072582 [details]
Bug 1559859 - Always release mWidget in UiCompositorControllerChild::Destroy()

Beta/Release Uplift Approval Request

  • User impact if declined: When Bug 1547760 is uplifted, this patch is necessary. If the patch is not applied during uplifting Bug 1547760, it might cause memory leak if gecko is shutdown with error.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: Bug 1547760
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The change is relatively simple.
  • String changes made/needed: none
Attachment #9072582 - Flags: approval-mozilla-beta?

Comment on attachment 9072582 [details]
Bug 1559859 - Always release mWidget in UiCompositorControllerChild::Destroy()

approved for 68.0b12

Attachment #9072582 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: