Bug 1559859 - Always release mWidget in UiCompositorControllerChild::Destroy(). r=kats, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D35210